<resources>
    <string name="app_name">AnimateApp</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="fade_in">Fade In</string>
    <string name="fade_out">Fade Out</string>
    <string name="slide_left">Slide Left</string>
    <string name="slide_right">Slide Right</string>
    <string name="slide_down">Slide Down</string>
    <string name="slide_up">Slide Up</string>
    <string name="zoomIn_and_fadeIn">Zoom In\nFade In</string>
    <string name="zoomOut_and_fadeOut">Zoom Out\nFade Out</string>
    <string name="rotate">Rotate</string>
    <string name="move">Move</string>
</resources>